--- a/invessence/modules/web/src/main/webapp/try/ltam/addon/page4.xhtml
+++ b/invessence/modules/web/src/main/webapp/try/ltam/addon/page4.xhtml
@@ -6,14 +6,18 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <div class="Container100 Responsive50 TextAlCenter">
-        <h1>Approximately how much money do you plan to invest in this account?</h1>
-        <br/><br/>
+        <h1>Assuming you invest for 10 years, which of the following range of
+            of returns are you most comfortable with?</h1>
 
-        <pe:inputNumber id="initialInvestment" styleClass="Wid90"
-                        value="#{ltamprofile.investment}"
-                        maxlength="11" decimalPlaces="0" symbol="$"/>
-        <br/><br/>
-        <h:outputText value="(Min of $500)"/>
+        <h2>
+            <p:selectOneRadio layout="pageDirection" value="#{ltamprofile.ans4}">
+                <f:selectItem itemLabel="Possible Gain of (13.65%) with potential loss of (-5.75%)" itemValue="1"/>
+                <f:selectItem itemLabel="Possible Gain of (17.90%) with potential loss of (-6.35%)" itemValue="2"/>
+                <f:selectItem itemLabel="Possible Gain of (24.71%) with potential loss of (-11.21%)" itemValue="3"/>
+                <f:selectItem itemLabel="Possible Gain of (29.28%) with potential loss of (-15.92%)" itemValue="4"/>
+                <f:selectItem itemLabel="Possible Gain of (35.33%) with potential loss of (-20.95%)" itemValue="5"/>
+            </p:selectOneRadio>
+        </h2>
     </div>
 
 </ui:composition>
