--- a/invessence/modules/web/src/main/webapp/try/ltam/addon/page5.xhtml
+++ b/invessence/modules/web/src/main/webapp/try/ltam/addon/page5.xhtml
@@ -6,17 +6,7 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <div class="Container100 Responsive50 TextAlCenter">
-        <h1>The graph below shows potential returns and losses within a portfolio
-        based on risk tolerance over a one-year calendar period. The portfolio for the
-        highest potential returns also have the highest potential loss.  Which of these
-        portfolio best reflects your risk tolerance?</h1>
-        <br/>
-
-        <p:outputPanel deferred="true">
-            <p:chart type="bar" model="#{ltamprofile.charts.barChart}"
-                     responsive="true"/>
-        </p:outputPanel>
-
+        <h1>Based on your answers, recommended objective is:</h1>
     </div>
 
 </ui:composition>
