--- a/invessence/modules/web/src/main/webapp/try/ltam/addon/page5.xhtml
+++ b/invessence/modules/web/src/main/webapp/try/ltam/addon/page5.xhtml
@@ -6,7 +6,18 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <div class="Container100 Responsive50 TextAlCenter">
-        <h1>Based on your answers, recommended objective is:</h1>
+        <h1>Risk tolerance is defined by the investors ability to accept short term losses
+            long-term gains. Your tolerance for risk is:</h1>
+
+        <h2>
+            <p:selectOneRadio layout="pageDirection" value="#{ltamprofile.ans4}">
+                <f:selectItem itemLabel="Income" itemValue="1"/>
+                <f:selectItem itemLabel="Income and Growth" itemValue="2"/>
+                <f:selectItem itemLabel="Growth and Income" itemValue="3"/>
+                <f:selectItem itemLabel="Growth" itemValue="4"/>
+                <f:selectItem itemLabel="Aggresive Growth" itemValue="5"/>
+            </p:selectOneRadio>
+        </h2>
     </div>
 
 </ui:composition>
