--- a/invessence/modules/web/src/main/webapp/try/ltam/addon/final.xhtml
+++ b/invessence/modules/web/src/main/webapp/try/ltam/addon/final.xhtml
@@ -6,13 +6,30 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <div class="Container100 Responsive50 TextAlCenter">
-        <h1>Based on your answers, recommended objective is:</h1>
-        <div class="EmptyBox20"></div>
-        <div class="DispInlBlock TexAlLeft MarTop20">
-            <div class="Fright">
-                <h2 class="black Fs24 FontRalewayMedium">#{ltamprofile.themeData.displayname}</h2>
-            </div>
+        <div class="TexAlCenter">
+            <h1>Based on your answers, recommended objective is:</h1>
         </div>
+        <div class="EmptyBox20"></div>
+        <table class="Container100 Responsive100 TextAlCenter">
+            <tr>
+                <td class="TexAlCenter">
+                    <div class="DispInlBlock TexAlLeft MarTop20">
+                        <div class="Fright">
+                            <h2 class="black Fs24 FontRalewayMedium">#{ltamprofile.themeData.displayname}</h2>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p:chart type="pie" model="#{ltamprofile.ltamcharts.pieChart}"
+                             rendered="#{ltamprofile.ltamcharts.pieChart != null}"
+                             style="width:100%;height:170px;"
+                             responsive="true">
+                    </p:chart>
+                </td>
+            </tr>
+        </table>
 
     </div>
 
