--- a/invessence/modules/web/src/main/webapp/try/ltam/addon/page5.xhtml
+++ b/invessence/modules/web/src/main/webapp/try/ltam/addon/page5.xhtml
@@ -6,16 +6,16 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <div class="Container100 Responsive50 TextAlCenter">
-        <h1>Risk tolerance is defined by the investors ability to accept short term losses
-            long-term gains. Your tolerance for risk is:</h1>
+        <h1>Assuming you invest for 10 years, which of the following range of
+            of returns are you most comfortable with?</h1>
 
         <h2>
-            <p:selectOneRadio layout="pageDirection" value="#{ltamprofile.ans4}">
-                <f:selectItem itemLabel="Income" itemValue="1"/>
-                <f:selectItem itemLabel="Income and Growth" itemValue="2"/>
-                <f:selectItem itemLabel="Growth and Income" itemValue="3"/>
-                <f:selectItem itemLabel="Growth" itemValue="4"/>
-                <f:selectItem itemLabel="Aggresive Growth" itemValue="5"/>
+            <p:selectOneRadio layout="pageDirection" value="#{ltamprofile.ans5}">
+                <f:selectItem itemLabel="Possible Gain of (13.65%) with potential loss of (-5.75%)" itemValue="1"/>
+                <f:selectItem itemLabel="Possible Gain of (17.90%) with potential loss of (-6.35%)" itemValue="2"/>
+                <f:selectItem itemLabel="Possible Gain of (24.71%) with potential loss of (-11.21%)" itemValue="3"/>
+                <f:selectItem itemLabel="Possible Gain of (29.28%) with potential loss of (-15.92%)" itemValue="4"/>
+                <f:selectItem itemLabel="Possible Gain of (35.33%) with potential loss of (-20.95%)" itemValue="5"/>
             </p:selectOneRadio>
         </h2>
     </div>
