--- a/invessence/modules/web/src/main/webapp/try/ltam/addon/page4.xhtml
+++ b/invessence/modules/web/src/main/webapp/try/ltam/addon/page4.xhtml
@@ -6,18 +6,18 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <div class="Container100 Responsive50 TextAlCenter">
-        <h1>Assuming you invest for 10 years, which of the following range of
-            of returns are you most comfortable with?</h1>
+            <h1>Based on your initial investment of $5,000.<br/>
+                What is the largest loss you could comfortably tolerate over a 1-year timeframe?</h1>
 
-        <h2>
-            <p:selectOneRadio layout="pageDirection" value="#{ltamprofile.ans5}">
-                <f:selectItem itemLabel="Possible Gain of (13.65%) with potential loss of (-5.75%)" itemValue="1"/>
-                <f:selectItem itemLabel="Possible Gain of (17.90%) with potential loss of (-6.35%)" itemValue="2"/>
-                <f:selectItem itemLabel="Possible Gain of (24.71%) with potential loss of (-11.21%)" itemValue="3"/>
-                <f:selectItem itemLabel="Possible Gain of (29.28%) with potential loss of (-15.92%)" itemValue="4"/>
-                <f:selectItem itemLabel="Possible Gain of (35.33%) with potential loss of (-20.95%)" itemValue="5"/>
-            </p:selectOneRadio>
-        </h2>
+            <h2>
+                <p:selectOneRadio layout="pageDirection" value="#{ltamprofile.ans4}">
+                    <f:selectItem itemLabel="$0 = 0%" itemValue="1"/>
+                    <f:selectItem itemLabel="-$250 = -5%" itemValue="2"/>
+                    <f:selectItem itemLabel="-$500 = -10%" itemValue="3"/>
+                    <f:selectItem itemLabel="-$750 =  -15%" itemValue="4"/>
+                    <f:selectItem itemLabel="-$1,000 = -25%" itemValue="5"/>
+                </p:selectOneRadio>
+            </h2>
     </div>
 
 </ui:composition>
