--- a/invessence/modules/web/src/main/webapp/pages/consumer/cadd.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/cadd.xhtml
@@ -19,7 +19,7 @@
 <p:growl id="caddgrowl" showDetail="true" sticky="true" escape="true"/>
 
 <div class="layout-portlets-box">
-    <p:panel id="dPanel1">
+    <p:panel id="dPanel1" style="height: 70px">
 
         <div class="Container33 Responsive">
             <div class="ContainerIndent">
