--- a/invessence/modules/web/src/main/webapp/try/ltam/ltamtest.xhtml
+++ b/invessence/modules/web/src/main/webapp/try/ltam/ltamtest.xhtml
@@ -15,22 +15,26 @@
 
                 <div class="layout-portlets-box">
                     <div class="Container100 Responsive50">
-                        <p:panel id="a1" style="border: 0px; background: transparent" styleClass="Container100 Responsive50">
+                        <p:panel id="a1" style="border: 0px; height: 270px" styleClass="Container100 Responsive50">
+                            <div class="Container50 Responsive50">
+                                <p:panelGrid columns="2" layout="grid"
+                                             style="border:0px !important; background:transparent;" class="FormContent">
+                                    <div class="Wid90">Advisor</div>
+                                    <p:inputText value="#{ltamtest.advisor}" styleClass="Wid90"
+                                                 required="true" requiredMessage="Advisor cannot be empty!">
+                                    </p:inputText>
+
+                                    <div class="Wid90">Rep</div>
+                                    <p:inputText value="#{ltamtest.rep}" styleClass="Wid90">
+                                    </p:inputText>
+
+
+                                </p:panelGrid>
+
+                            </div>
+                            <div class="Container50 Responsive50">
                             <p:panelGrid columns="2" layout="grid" styleClass="Container50 Responsive50"
-                                         style="border:0px !important; background:none;" class="FormContent">
-                                <div class="Wid90">Advisor</div>
-                                <p:inputText value="#{ltamtest.advisor}" styleClass="Wid90"
-                                             required="true" requiredMessage="Advisor cannot be empty!">
-                                </p:inputText>
-
-                                <div class="Wid90">Rep</div>
-                                <p:inputText value="#{ltamtest.rep}" styleClass="Wid90">
-                                </p:inputText>
-
-
-                            </p:panelGrid>
-                            <p:panelGrid columns="2" layout="grid" styleClass="Container50 Responsive50"
-                                         style="border:0px !important; background:none;" class="FormContent">
+                                         style="border:0px !important; background:transparent;" class="FormContent">
                                 <div class="Wid90">First Name</div>
                                 <p:inputText value="#{ltamtest.firstname}" styleClass="Wid90">
                                 </p:inputText>
@@ -45,10 +49,11 @@
                                 </p:inputText>
 
                             </p:panelGrid>
+                            </div>
 
                             <f:facet name="footer">
                                 <p:commandButton value="Client Portal" styleClass="Fleft"
-                                                 actionListener="#{ltamtest.clientPortal}"/>
+                                                 type="submit" actionListener="#{ltamtest.clientPortal}"/>
                                 <p:commandButton value="Time-to-Save" styleClass="Fright"
                                                  actionListener="#{ltamtest.timetoSavePortal}"/>
                             </f:facet>
